Ajuste de label e compilação: tabela resumo

--- a/Articles/VECM/Petrini_VECM_2021.tex
+++ b/Articles/VECM/Petrini_VECM_2021.tex
@@ -1,4 +1,4 @@
-% Created 2021-02-15 seg 18:20
+% Created 2021-02-15 seg 18:27
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
@@ -64,7 +64,7 @@ while the other way round does not occur.
 
 
 \section{Introduction}
-\label{sec:orga872da7}
+\label{sec:orga30c694}
 \label{sec:Introduction}
 Among aggregate demand expenditures, non-residential investment is the most examined  one between (at least) heterodox macroeconomists.
 As a consequence, the relevance of others (autonomous) expenditures on macroeconomic dynamics has been underestimated \cite{brochier_macroeconomics_2017}.
@@ -82,7 +82,7 @@ The results for all statistical tests are provided in Appendix \ref{appen:A}.
 
 
 \section{Residential investment, economic growth and business cycle in the US economy}
-\label{sec:org30d077e}
+\label{sec:orge9e9cce}
 \label{sec:Stylized_Facts}
 Traditionally, economists do not pay attention to the role of residential investment to macroeconomic dynamics.
 There are, nevertheless, two notable exceptions.
@@ -161,10 +161,10 @@ Other studies have shown that real estate inflation is the main determinant of h
 In summary, what we intended to show was the macroeconomic relevance of residential investment.
 On the following section, we analyze how econometric literature has dealt with determinants of the latter.
 \section{Review of the Macroeconometric Literature}
-\label{sec:org01ee9bb}
+\label{sec:orgae53656}
 \label{sec:empirical_review}
 \subsection{Ausência de trabalhos que analizam investimento residencial de um ponto de vista macroeconômico}
-\label{sec:orgaad53cb}
+\label{sec:org279f055}
 As we have seen in the previous session, there have been a growing attention to the macroeconomic implications of housing.
 However, most of this literature treat housing-related variables in a microeconomic and regional fashion.
 According to \textcite{arestis_u.s._2008}, the US housing market in particular is quite heterogeneous.
@@ -226,10 +226,10 @@ In the next section, we will present a particular way of combining the two varia
 \input{tabs/EmpiricalMotivation}
 
 \section{Macroeconometric analysis}
-\label{sec:orgdb43262}
+\label{sec:org8195bd7}
 \label{sec:VECM}
 \subsection{Houses' own interest rate and residential investment growth rate in the US	Economy}
-\label{sec:orgaafc2a0}
+\label{sec:orgaa41483}
 \label{sc:own}
 
 
@@ -255,7 +255,7 @@ As discussed before, this housing boom was possible because of some changes of h
 
 
 \subsubsection{Descrição teórica da taxa própria}
-\label{sec:org680e695}
+\label{sec:org4c21b33}
 Next, we describe the relationship between residential investment growth rate (\(g_{I_h}\)) and houses' own interest rate (\(own\)) as proposed by \textcite{teixeira_crescimento_2015}.
 Next, we will present the hypothesis to be tested on the Section \ref{sec:estimation}. To obtain this relationship, we deflate mortgage interest rate (\(r_{mo}\)) by real estate inflation (\(\pi\)) as follows:
 
@@ -298,7 +298,7 @@ Based on \textcite{teixeira_crescimento_2015}, we depict the expected results in
 \input{./tabs/hypothesis.tex}
 
 \subsection{Data and estimation strategy}
-\label{sec:orgf9d02c1}
+\label{sec:org9f2318c}
 \label{sec:estimation}
 
 
@@ -379,7 +379,7 @@ On the following subsection, we analyze the results and compare with the theoret
 
 
 \subsection{Estimation results}
-\label{sec:org8845926}
+\label{sec:org9766857}
 \label{sec:results}
 
 According to parameters presented in Table \ref{Estimacao}, we find statistically significant co-integration  coefficients for both equations. 
@@ -424,7 +424,7 @@ In short, our results shows that an increase in mortgage interest rate (equivale
 \end{figure}
 
 \subsection{Comparison with previous studies}
-\label{sec:org22e145b}
+\label{sec:org8eb15b6}
 
 In this section,  we contrast our findings with those obtained by the literature.
 At this stage, we restrict the comparison with  \textcite{gauger_residential_2003} and \textcite{arestis_residential_2015} since we share the same topic.
@@ -437,7 +437,7 @@ Thus, we conclude that our estimation depicts residential investment growth rate
 On the following section we present some concluding remarks.
 
 \section{Concluding Remarks}
-\label{sec:org690b2c0}
+\label{sec:org2d18616}
 \label{sec:Conclusion}
 In this article, we present a residential investment growth rate specification compatible with the Srrafian supermultiplier model.
 To do so, we estimate a bi-dimension VEC evaluate \textcite{teixeira_crescimento_2015}
@@ -464,22 +464,22 @@ Thus, our  proposal differs from the usual empirical literature by:
 
 
 \section*{Acknowledgments}
-\label{sec:org43cebd8}
+\label{sec:org2e87063}
 \noindent The authors wish to acknowledge the financial support from the Brazilian National Research Council (CNPq; grant 130777/2018-8). We are grateful to Rosângela Ballini, Carolina Baltar, Júlia Braga, Ítalo Pedrosa, Cecon/Unicamp and UFRJ Macroeconomic discussion groups for useful comments and suggestions on earlier drafts of this article. All remaining errors are, of course, our own.
 
 
 \section*{Disclosure statement}
-\label{sec:orgd2fa410}
+\label{sec:org74cd754}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:orgd9e7bd9}
+\label{sec:org38d4719}
 \printbibliography[heading=none]
 
 
 \appendix
 \section{Statistical Appendix}
-\label{sec:org8f80c5a}
+\label{sec:orgc536cc7}
 \label{appen:A}
 
 In this appendix we report several tests: unit root tests on our variables of interest, Structural break test, Johansen procedure and hypothesis tests on residuals. 
