--- a/Articles/VECM/tabs/EmpiricalMotivation.tex
+++ b/Articles/VECM/tabs/EmpiricalMotivation.tex
@@ -13,7 +13,7 @@
     \textcite{egebo_1990_MODEL} & 7 OECD countries (1960-1987) & OLS & \makecell{$RDY(+), RINT(-), PRIr(-),$\\$PRSr(+)$} \\\hline
     \textcite{mccarthyMonetaryPolicyTransmission2002} & US (1975-1985 and 1986-2000) & EC-GMM & \makecell{$HP(+), CC(-), SINT(-),$\\$LAND(-), H(-)$} \\\hline
     \textcite{barot_2002_House} & UK and Sweden (1970-1998) & EC model & $Q(+), RINT(-)$ \\\hline
-    \textcite{gauger_residential_2003} & US (1959-79 and 1982-99) & VECM and Granger test & $M2, GDP(+), SINT(-), MR(-),$\\\hline
+    \textcite{gauger_residential_2003} & US (1959-79 and 1982-99) & VECM and Granger test & $M2, GDP(+), SINT(-), MR(-)$\\\hline
     \textcite{arestis_residential_2015} & 17 OECD countries (1970-2013) & ARDL Model & \makecell{$RHP(+), RDY(-), MR(-),$\\$ Cr(+), UN(-)$}\\\hline
     \textcite{kohlscheen_2018_Residential} & 15 OECD countries (1970-2017) & OLS & \makecell{$Q(+), RHP(+), GDPc(+),$\\$ POP(+), NM(+), H(-)$} \\\hline
     \hline
@@ -21,7 +21,7 @@
     % \end{tabular}
     % } %end resize
 
-    \footnotesize{\textbf{Notes:} Signs inside parenthesis indicates expected effects. \textcite{topel_1988_Housing} use housing starts as the dependend variable; all the other use residential investment ($RI$). \textbf{Covariates dictionary:} $RHP$ Real House Prices; $NCD$ Non-residential construction deflator; $W$ Real Construction Wage; $Cr$ Banking Credit; $HS$ Housing Starts; $HeP$ Hedonic Prices; $INT$ Interest Rates (non-specified); $INFLA$ Expected inflation; $TIME$ Median market time since the begin of construction; $RDY$ Real Disposable Income; $RINT$ Real Interest Rate; $PRIr$ Residential investment relative price; $PRSr$ Residential services relative prices; $HP$ House Prices; $CC$ Construction Costs; $SINT$ Short-term Interest Rate; $LAND$ Land Price; $H$ House Stock; $Q$ Adapted Tobin's Q for the housing sector; $RINT$ Real interest rate; $M2$ Monetary aggregates; $GDP$ Gross Domestic Product; $MR$ Mortgage Interest rate; $UN$ Unemployment rate; $GDPc$ GDP per capita; $POP$ Population Density; $NM$ Net Migration rates (per 1000 population).}
+    \footnotesize{\textbf{Notes:} Signs inside parenthesis indicates expected effects. \textcite{topel_1988_Housing} use housing starts as the dependent variable while \textcite{arestis_residential_2015} use real residential investment ($RRI$); all the other use residential investment ($RI$). \textbf{Covariates dictionary:} $RHP$ Real House Prices; $NCD$ Non-residential construction deflator; $W$ Real Construction Wage; $Cr$ Banking Credit; $HS$ Housing Starts; $HeP$ Hedonic Prices; $INT$ Interest Rates (non-specified); $INFLA$ Expected inflation; $TIME$ Median market time since the begin of construction; $RDY$ Real Disposable Income; $RINT$ Real Interest Rate; $PRIr$ Residential investment relative price; $PRSr$ Residential services relative prices; $HP$ House Prices; $CC$ Construction Costs; $SINT$ Short-term Interest Rate; $LAND$ Land Price; $H$ House Stock; $Q$ Adapted Tobin's Q for the housing sector; $RINT$ Real interest rate; $M2$ Monetary aggregates; $GDP$ Gross Domestic Product; $MR$ Mortgage Interest rate; $UN$ Unemployment rate; $GDPc$ GDP per capita; $POP$ Population Density; $NM$ Net Migration rates (per 1000 population).}
   \end{threeparttable}
     \caption*{\textbf{Source:} Authors' elaboration}
 \end{table}
