Migrating to org-roam and adding entries

--- a/Readings/QCA.org
+++ b/Readings/QCA.org
@@ -19,397 +19,6 @@
 
 
 
-* [#A] Reviews
-:PROPERTIES:
-:COLUMNS:  %6TYPE %7TODO(Decision) %20ITEM(Title) %4YEAR %8STATUS %7RELEVANCE %7IMPACT %4CITE
-:TYPE_ALL: Theory Method Case Manual Other Thechnical Review
-:DECISION_ALL: Read File Skip PartialRead
-:ZOTERO_ALL: Yes No Partial Entry
-:STATUS_ALL: Reading Searching Abandoned Finished Skimmed NotFound 404 Downloaded Filed
-:RELEVANCE_ALL: High Regular Low None
-:IMPACT_ALL: High Regular Low None
-:CITE_ALL: Yes No Wait
-:YEAR: 
-:UNNUMBERED: t
-:END:  
-
-
-** REF [#A] [[https://doi.org/10.1016/j.jik.2016.12.002][Roig-Tierno et al - An overview of qualitative comparative analysis: A bibliometric analysis]] :Review:Bibliometric:
-   CLOSED: [2020-09-16 qua 18:57]
-   :PROPERTIES:
-   :YEAR:     2017
-   :ZOTERO:   Yes
-   :TYPE:     Review
-   :STATUS:   Filed
-   :RELEVANCE: Low
-   :IMPACT:   Low
-   :CITE:     Yes
-   :END:    
-** REF [#A] [[https://doi.org/10.1016/j.jbusres.2015.10.010][Wagemann Buche and Siewert - QCA and business research: Work in progress or a consolidated agenda?]] :Review:
-   CLOSED: [2020-09-16 qua 11:56]
-   :PROPERTIES:
-   :ZOTERO: Yes
-   :YEAR: 2016
-   :TYPE: Review
-   :STATUS:   Skimmed
-   :RELEVANCE: Low
-   :IMPACT:   Low
-   :CITE: Yes
-   :END:    
-
-** REF [#B] [[https://doi.org/10.1016/j.jbusres.2020.05.003][Research methods in business: Quantitative and qualitative comparative analysis]] :Survey:Business:
-   CLOSED: [2020-09-16 qua 15:40]
-   :PROPERTIES:
-   :YEAR:     2020
-   :ZOTERO:   Entry
-   :TYPE:     Review
-   :STATUS:   Finished
-   :RELEVANCE: Low
-   :IMPACT:   Low
-   :CITE:     Yes
-   :END:    
-** REF [#C] [[https://doi.org/10.1007/s11365-017-0461-8][Kraus, Ribeiro-Soriano and Schüssler -  Fuzzy-set qualitative comparative analysis (fsQCA) in entrepreneurship and innovation research – the rise of a method]] :ignore:Survey:
-   CLOSED: [2020-09-16 qua 18:55]
-   :PROPERTIES:
-   :YEAR:     2018
-   :ZOTERO:   Entry
-   :TYPE:     Review
-   :STATUS:   Filed
-   :RELEVANCE: Low
-   :IMPACT:   Low
-   :CITE:     Yes
-   :END:    
-** MAYBE [#C] [[https://doi.org/10.1177%2F0010414013519410][Mahoney and Vanderpoel - Set Diagrams and Qualitative Research]] :Visualization:ignore:
-   :PROPERTIES:
-   :YEAR:     2014
-   :ZOTERO:   Entry
-   :TYPE:     Other
-   :STATUS:   Filed
-   :RELEVANCE: Low
-   :IMPACT:   None
-   :CITE:     No
-   :END:    
-
-** REF [#C] Review Survey
-   CLOSED: [2020-09-18 sex 16:05]
-
-#+BEGIN: columnview :maxlevel 3 :id local
-| TYPE   | Decision | Title                                                                                                                                                         | YEAR | STATUS   | RELEVANCE | IMPACT | CITE |
-|--------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------+------+----------+-----------+--------+------|
-|        |          | Reviews                                                                                                                                                       |      |          |           |        |      |
-| Review | REF      | [[https://doi.org/10.1016/j.jbusres.2020.05.003][Research methods in business: Quantitative and qualitative comparative analysis]]                                                                               | 2020 | Finished | Low       | Low    | Yes  |
-| Review | REF      | [[https://doi.org/10.1007/s11365-017-0461-8][Kraus, Ribeiro-Soriano and Schüssler -  Fuzzy-set qualitative comparative analysis (fsQCA) in entrepreneurship and innovation research – the rise of a method]] | 2018 | Filed    | Low       | Low    | Yes  |
-| Review | REF      | [[https://doi.org/10.1016/j.jik.2016.12.002][Roig-Tierno et al - An overview of qualitative comparative analysis: A bibliometric analysis]]                                                                  | 2017 | Filed    | Low       | Low    | Yes  |
-| Review | REF      | [[https://doi.org/10.1016/j.jbusres.2015.10.010][Wagemann Buche and Siewert - QCA and business research: Work in progress or a consolidated agenda?]]                                                            | 2016 | Skimmed  | Low       | Low    | Yes  |
-| Other  | MAYBE    | [[https://doi.org/10.1177%2F0010414013519410][Mahoney and Vanderpoel - Set Diagrams and Qualitative Research]]                                                                                                | 2014 | Filed    | Low       | None   | No   |
-|        | REF      | Review Survey                                                                                                                                                 |      |          |           |        |      |
-#+END
-
-* [#A] Manuals
-:PROPERTIES:
-     :COLUMNS:  %7TODO(Decision) %20ITEM(Title) %4YEAR %SOFTWARE(Technology)  %8STATUS %7RELEVANCE %7IMPACT %4CITE
-     :TYPE_ALL: Theory Method Case Manual Other Thechnical Review
-     :DECISION_ALL: Read File Skip PartialRead
-     :ZOTERO_ALL: Yes No Partial Entry
-     :STATUS_ALL: Reading Searching Abandoned Finished Skimmed NotFound 404 Downloaded Filed
-     :RELEVANCE_ALL: High Regular Low None
-     :IMPACT_ALL: High Regular Low None
-     :CITE_ALL: Yes No Wait
-     :YEAR:
-     :UNNUMBERED: t
-     :BIBTEX_AL: Yes Partial Revise No
-     :SOFTWARE_ALL: R Python Tosmana Kirq fsQCA Other None
-:END:  
-
-
-** READ [#A] [[https://doi.org/10.1177%2F1098214016673902][Theim - Conducting Configurational Comparative Research With Qualitative Comparative Analysis: A Hands-On Tutorial for Applied Evaluation Scholars and Practitioners]] :BestPractices:BenchMark:
-   :PROPERTIES:
-   :YEAR:     2016
-   :ZOTERO:   Yes
-   :TYPE:     Manual
-   :STATUS:   Skimmed
-   :RELEVANCE: Regular
-   :IMPACT:   Regular
-   :CITE:     Yes
-   :BIBTEX: Yes
-   :END:    
-
-#+BEGIN_SRC bibtex
-@Article{Thiem_2016,
-  author       = {Thiem, Alrik},
-  title	       = {Conducting Configurational Comparative Research With
-                  Qualitative Comparative Analysis},
-  year	       = 2016,
-  volume       = 38,
-  number       = 3,
-  month	       = {Nov},
-  pages	       = {420–433},
-  issn	       = {1557-0878},
-  doi	       = {10.1177/1098214016673902},
-  url	       = {http://dx.doi.org/10.1177/1098214016673902},
-  journal      = {American Journal of Evaluation},
-  publisher    = {SAGE Publications}
-}
-#+END_SRC
-
-** READ [#B] [[https://doi.org/10.1057/s41304-017-0142-7][Radaelli and Wagemann -  What did I leave out? Omitted variables in regression and qualitative comparative analysis]] :Estimation:Ommited:Comparison:
-   :PROPERTIES:
-   :YEAR:     2019
-   :ZOTERO:   Yes
-   :TYPE:     Manual
-   :STATUS:   Downloaded
-   :RELEVANCE: Regular
-   :IMPACT:   Low
-   :CITE:     Wait
-   :END:    
-
-#+BEGIN_SRC bibtex
-@Article{Radaelli_2018,
-  author       = {Radaelli, Claudio M. and Wagemann, Claudius},
-  title	       = {What did I leave out? Omitted variables in
-                  regression and qualitative comparative analysis},
-  year	       = 2018,
-  volume       = 18,
-  number       = 2,
-  month	       = {Jan},
-  pages	       = {275–290},
-  issn	       = {1682-0983},
-  doi	       = {10.1057/s41304-017-0142-7},
-  url	       = {http://dx.doi.org/10.1057/s41304-017-0142-7},
-  journal      = {European Political Science},
-  publisher    = {Springer Science and Business Media LLC}
-}
-#+END_SRC
-
-** READ [#B] [[https://stefanverweij.eu/wp-content/uploads/2018/09/2018-Edward-Elgar-Gerrits-Verweij.pdf][Gerrits and Verweij - The evaluation of complex infrastructure projects]] :BestPractices:
-   :PROPERTIES:
-   :ZOTERO: Yes
-   :YEAR: 2018
-   :TYPE: Manual
-   :STATUS:   Searching
-   :RELEVANCE: Regular
-   :IMPACT: High
-   :CITE: Wait
-   :END:    
-** READ [#B] [[https://dx.doi.org/10.4135/9781452226569.n5][Ragin - Qualitative Comparative Analysis using Fuzzy Sets (fsQCA)]] :Manual:
-   :PROPERTIES:
-   :ZOTERO: Yes
-   :YEAR: 2009
-   :TYPE: Manual
-   :STATUS: Skimmed
-   :RELEVANCE: High
-   :IMPACT: High
-   :CITE: Yes
-   :BIBTEX: Yes
-   :END:    
-   
-#+BEGIN_SRC bibtex
-@Article{Ragin,
-  author       = {Ragin, Charles C.},
-  title	       = {Qualitative Comparative Analysis using Fuzzy Sets
-                  (fsQCA)},
-  pages	       = {87–122},
-  doi	       = {10.4135/9781452226569.n5},
-  url	       = {http://dx.doi.org/10.4135/9781452226569.n5},
-  isbn	       = 9781452226569,
-  journal      = {Configurational Comparative Methods: Qualitative
-                  Comparative Analysis (QCA) and Related Techniques},
-  publisher    = {SAGE Publications, Inc.}
-}
-
-#+END_SRC
-
-** READ [#C] [[https://us.sagepub.com/sites/default/files/upm-assets/23236_book_item_23236.pdf][Berg-Schlosser, De Meur, Rihoux, and Ragin - Qualitative Comparative Analysis (QCA) as an approach]] :Canonical:
-   :PROPERTIES:
-   :ZOTERO: Yes
-   :YEAR: 2009
-   :TYPE: Manual
-   :STATUS: Reading
-   :RELEVANCE: Regular
-   :IMPACT: Reagular
-   :CITE: Yes
-   :END:    
-** SKIM [#B] [[https://www.researchgate.net/deref/http%3A%2F%2Fdx.doi.org%2F10.1163%2F156913210X12493538729793][Schneider and Wagemann - Standards of good practice in qualitative comparative analysis (QCA) and fuzzy-sets]] :fsQCA:BestPractices:
-   :PROPERTIES:
-   :ZOTERO: Yes
-   :YEAR: 2010
-   :TYPE: Manual
-   :STATUS: Downloaded
-   :RELEVANCE: Regular
-   :IMPACT: Low
-   :CITE: Wait
-   :END:    
-
-** WAIT [#A] [[https://dx.doi.org/10.4135/9781452226569.n2][Berg-Schlosser and De Meur - Comparative research design: Case and variable selection]] :Selection:
-   :PROPERTIES:
-   :ZOTERO: Yes
-   :YEAR: 2009
-   :TYPE:
-   :STATUS: NotFound
-   :RELEVANCE:
-   :IMPACT:
-   :DECISION:
-   :CITE:
-   :END:    
-
-** WAIT [#B] [[https://doi.org/10.1177%2F0049124194023001002][Amenta and Poulsen: Where to begin: A survey of five approaches to selecting independent variables for  qualitative-comparative analysis]] :BestPractices:
-   :PROPERTIES:
-   :ZOTERO: Yes
-   :YEAR: 1994
-   :TYPE: Manual
-   :STATUS: Skimmed
-   :RELEVANCE: Low
-   :IMPACT: High
-   :CITE: Wait
-   :END:    
-
-
-#+BEGIN_SRC bibtex
-@Article{AMENTA_1994,
-  author       = {AMENTA, EDWIN and POULSEN, JANE D.},
-  title	       = {Where to Begin},
-  year	       = 1994,
-  volume       = 23,
-  number       = 1,
-  month	       = {Aug},
-  pages	       = {22–53},
-  issn	       = {1552-8294},
-  doi	       = {10.1177/0049124194023001002},
-  url	       = {http://dx.doi.org/10.1177/0049124194023001002},
-  journal      = {Sociological Methods & Research},
-  publisher    = {SAGE Publications}
-}
-#+END_SRC
-
-** WAIT [#C] [[http://www.socsci.uci.edu/~cragin/fsQCA/software.shtml][Ragin - User's guide to Fuzzy-set / Qualitative Comparative Analysis]] :ignore:Software:
-   :PROPERTIES:
-   :ZOTERO: No
-   :YEAR: 2017
-   :TYPE: Manual
-   :STATUS: Skimmed
-   :RELEVANCE: Regular
-   :IMPACT: Regular
-   :CITE: No
-   :END:    
-
-** WAIT [#C] [[https://doi.org/10.5281/zenodo.893091][Wagemann and Schneider - Transparency standards in qualitative comparative analysis]] :BestPractices:
-   :PROPERTIES:
-   :YEAR: 2015
-   :ZOTERO:   Yes
-   :TYPE:     Manual
-   :STATUS:   Skimmed
-   :RELEVANCE: Low
-   :IMPACT:   Low
-   :CITE: Wait
-   :END:    
-** WAIT [#C] [[https://press.uchicago.edu/ucp/books/book/chicago/F/bo3635786.html][Ragin - Fuzzy-set social science]] :Cacnonical:Manual:ignore:noexport:
-   :PROPERTIES:
-   :ZOTERO: Yes
-   :YEAR: 2000
-   :TYPE: Manual
-   :STATUS: Downaloaded
-   :RELEVANCE: Regular
-   :IMPACT: High
-   :CITE: Yes
-   :END:    
-
-*Part to Read:* Part Two and fowards
-
-** MAYBE [#A] [[https://doi.org/10.2307/2110917][Cioffi-Revilla -  Fuzzy Sets and Models of International Relations]] :Fuzzy:Mathematical:ignore:
-   :PROPERTIES:
-   :YEAR:     1981
-   :ZOTERO:   Yes
-   :TYPE:     Thechnical
-   :STATUS:   Filed
-   :RELEVANCE: Low
-   :IMPACT:   Low
-   :CITE:     Wait
-   :END:    
-
-#+BEGIN_SRC bibtex
-@Article{Cioffi_Revilla_1981,
-  author       = {Cioffi-Revilla, Claudio A.},
-  title	       = {Fuzzy Sets and Models of International Relations},
-  year	       = 1981,
-  volume       = 25,
-  number       = 1,
-  month	       = {Feb},
-  pages	       = 129,
-  issn	       = {0092-5853},
-  doi	       = {10.2307/2110917},
-  url	       = {http://dx.doi.org/10.2307/2110917},
-  journal      = {American Journal of Political Science},
-  publisher    = {JSTOR}
-}
-#+END_SRC
-** MAYBE [#C] [[https://www.amazon.com.br/Comparative-Method-Qualitative-Quantitative-Strategies/dp/0520280032][Ragin - The comparative method. Moving beyond qualitative and quantitative strategies]] :Canonical:ignore:
-   :PROPERTIES: 
-   :ZOTERO: Yes
-   :YEAR: 1987
-   :TYPE: Manual
-   :STATUS: Downloaded
-   :RELEVANCE: Regular 
-   :IMPACT: Regular
-   :CITE: Yes
-   :END:    
-
-** REF [#C] [[https://doi.org/10.1177/1525822X11433998][Basurto and Speer - Structuring the calibration of qualitative data as sets for Qualitative Comparative Analysis (QCA)]] :BestPractices:ignore:
-   CLOSED: [2020-09-18 sex 14:28]
-   :PROPERTIES:
-   :ZOTERO:   Yes
-   :YEAR:     2012
-   :TYPE:     Manual
-   :STATUS:   Skimmed
-   :RELEVANCE: Regular
-   :IMPACT:   High
-   :CITE:     Wait
-   :BIBTEX: Yes
-   :END:    
-
-#+BEGIN_SRC bibtex
-@Article{Basurto_2012,
-  author       = {Basurto, Xavier and Speer, Johanna},
-  title	       = {Structuring the Calibration of Qualitative Data as
-                  Sets for Qualitative Comparative Analysis (QCA)},
-  year	       = 2012,
-  volume       = 24,
-  number       = 2,
-  month	       = {Apr},
-  pages	       = {155–174},
-  issn	       = {1552-3969},
-  doi	       = {10.1177/1525822x11433998},
-  url	       = {http://dx.doi.org/10.1177/1525822X11433998},
-  journal      = {Field Methods},
-  publisher    = {SAGE Publications}
-}
-#+END_SRC
-
-
-
-** REF [#C] Manual Survey
-   CLOSED: [2020-09-18 sex 14:54]
-
-#+BEGIN: columnview :maxlevel 3 :id local
-| Decision | Title                                                                                                                                                                | YEAR | Technology | STATUS      | RELEVANCE | IMPACT   | CITE |
-|----------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+------------+-------------+-----------+----------+------|
-|          | Manuals                                                                                                                                                              |      |            |             |           |          |      |
-| READ     | [[https://doi.org/10.1177%2F1098214016673902][Theim - Conducting Configurational Comparative Research With Qualitative Comparative Analysis: A Hands-On Tutorial for Applied Evaluation Scholars and Practitioners]] | 2016 |            | Skimmed     | Regular   | Regular  | Yes  |
-| READ     | [[https://doi.org/10.1057/s41304-017-0142-7][Radaelli and Wagemann -  What did I leave out? Omitted variables in regression and qualitative comparative analysis]]                                                  | 2019 |            | Downloaded  | Regular   | Low      | Wait |
-| READ     | [[https://stefanverweij.eu/wp-content/uploads/2018/09/2018-Edward-Elgar-Gerrits-Verweij.pdf][Gerrits and Verweij - The evaluation of complex infrastructure projects]]                                                                                              | 2018 |            | Searching   | Regular   | High     | Wait |
-| READ     | [[https://dx.doi.org/10.4135/9781452226569.n5][Ragin - Qualitative Comparative Analysis using Fuzzy Sets (fsQCA)]]                                                                                                    | 2009 |            | Skimmed     | High      | High     | Yes  |
-| READ     | [[https://us.sagepub.com/sites/default/files/upm-assets/23236_book_item_23236.pdf][Berg-Schlosser, De Meur, Rihoux, and Ragin - Qualitative Comparative Analysis (QCA) as an approach]]                                                                   | 2009 |            | Reading     | Regular   | Reagular | Yes  |
-| SKIM     | [[https://www.researchgate.net/deref/http%3A%2F%2Fdx.doi.org%2F10.1163%2F156913210X12493538729793][Schneider and Wagemann - Standards of good practice in qualitative comparative analysis (QCA) and fuzzy-sets]]                                                         | 2010 |            | Downloaded  | Regular   | Low      | Wait |
-| WAIT     | [[https://dx.doi.org/10.4135/9781452226569.n2][Berg-Schlosser and De Meur - Comparative research design: Case and variable selection]]                                                                                | 2009 |            | NotFound    |           |          |      |
-| WAIT     | [[https://doi.org/10.1177%2F0049124194023001002][Amenta and Poulsen: Where to begin: A survey of five approaches to selecting independent variables for  qualitative-comparative analysis]]                             | 1994 |            | Skimmed     | Low       | High     | Wait |
-| WAIT     | [[http://www.socsci.uci.edu/~cragin/fsQCA/software.shtml][Ragin - User's guide to Fuzzy-set / Qualitative Comparative Analysis]]                                                                                                 | 2017 |            | Skimmed     | Regular   | Regular  | No   |
-| WAIT     | [[https://doi.org/10.5281/zenodo.893091][Wagemann and Schneider - Transparency standards in qualitative comparative analysis]]                                                                                  | 2015 |            | Skimmed     | Low       | Low      | Wait |
-| WAIT     | [[https://press.uchicago.edu/ucp/books/book/chicago/F/bo3635786.html][Ragin - Fuzzy-set social science]]                                                                                                                                     | 2000 |            | Downaloaded | Regular   | High     | Yes  |
-| MAYBE    | [[https://www.amazon.com.br/Comparative-Method-Qualitative-Quantitative-Strategies/dp/0520280032][Ragin - The comparative method. Moving beyond qualitative and quantitative strategies]]                                                                                | 1987 |            | Downloaded  | Regular   | Regular  | Yes  |
-| REF      | [[https://doi.org/10.1177/1525822X11433998][Basurto and Speer - Structuring the calibration of qualitative data as sets for Qualitative Comparative Analysis (QCA)]]                                               | 2012 |            | Skimmed     | Regular   | High     | Wait |
-| REF      | Manual Survey                                                                                                                                                        |      |            |             |           |          |      |
-#+END  
-
-
 * [#A] Theoretical                                              :Theoretical:
 :PROPERTIES:
 :COLUMNS:  %7TODO(Decision) %20ITEM(Title) %4YEAR %8STATUS %PRIORITY %7RELEVANCE %7IMPACT %4CITE %BIBTEX
@@ -424,32 +33,6 @@
 :UNNUMBERED: t
 :BIBTEX_ALL: Yes Partial Revise No
 :END:  
-
-** READ [#A] [[https://journals.sagepub.com/doi/pdf/10.1177/2059799120959170][Pagliarin and Gerrits - Trajectory-based Qualitative Comparative Analysis: Accounting for case-based time dynamics]]
-   :PROPERTIES:
-   :YEAR:     2020
-   :ZOTERO:   Yes
-   :TYPE:     Thechnical
-   :STATUS:   Filed
-   :RELEVANCE: High
-   :IMPACT:   Regular
-   :CITE:     Yes
-   :END:    
-
-#+BEGIN_SRC bibtex
-@Article{Pagliarin_TJQCA_2020,
-  author       = {Pagliarin, Sofia and Gerrits, Lasse},
-  title	       = {Trajectory-based Qualitative Comparative Analysis: Accounting for case-based time dynamics},
-  year	       = {2020},
-  volume       = {13},
-  number       = {3},
-  month	       = {Sep},
-  doi	       = {10.1177/2059799120959170},
-  url	       = {http://dx.doi.org/10.1177/2059799120959170},
-  journal      = {Methodological Innovations},
-  publisher    = {SAGE Publications}
-}
-#+END_SRC
 
 
 ** READ [#A] [[https://doi.org/10.1007/s11135-016-0338-x][Huarng and Yu -  Using qualitative approach to forecasting regime switches]] :StructBreak:Forecast:Financial:TimeSeries:
@@ -710,7 +293,8 @@
 |-----------------------------------------------+---|
 
 
-** WAIT [#C] [[https://doi.org/10.1179/rea.12.2.p663527490513071][Gerrits, and Verweij - Critical realism as a meta-framework for understanding the relationships between complexity and qualitative comparative analysis]] :Complexity:ignore:
+** ARCH [#C] [[https://doi.org/10.1179/rea.12.2.p663527490513071][Gerrits, and Verweij - Critical realism as a meta-framework for understanding the relationships between complexity and qualitative comparative analysis]] :Complexity:ignore:
+CLOSED: [2021-02-16 ter 11:53]
    :PROPERTIES:
    :ZOTERO: Entry
    :YEAR: 2013
