--- a/Writings/QCA/Research_Paper.org
+++ b/Writings/QCA/Research_Paper.org
@@ -24,7 +24,9 @@
 - Institutional diversity still matters? Comparing housing financing milestones using fsQCA (1989-2014)
 ** Introduction
 *** Importância do mercado imobiliário para compreender características da GFC
+- Reforçar como o interesse aumentou pós GFC
 *** Relação entre endividamento das famílias, preço dos imóveis e estabilidade financeira
+- Misleading?
 *** Apresentação do conceito de hipotecarização e mudanças de longo prazo
 *** Apresentação da revolução
 *** Estrutura do artigo
@@ -33,17 +35,28 @@
 *** Apresentar conceito da hipotecarização
 *** Analisar os dados
 *** Agrupar países e explicitar possíveis hipóteses direcionais e trajetórias
-** Review of literature
-*** Revisão da literatura de financeirização e pouca anteção para o setor imobiliário
 *** Apresentar a revolução em maiores detalhes
-*** Apresentar comparação internacional e elementos institucionais
-*** Revisão da literatura empírica e incapacidade de analisar variáveis qualitativas adequadamente
+*** Reagrupar informações institucionais de forma qualitativa
+*** Gancho para a seção seguinte: relevância de particularidades institucionais para compreender suas implicações
+** Review of literature
+*** Crescente atenção ao mercado imobiliário, mas pouca atenção em sua institucionalidade em uma perspectiva macro-financeira
+*** Revisão da literatura de financeirização e pouca anteção para o setor imobiliário
+- Por quê? Dá atenção a elementos financeiros, mais pouco à instituição e menos ainda a housing
+- Misleading?
 *** Revisão de VoC
 **** Discutir convergência e divergência institucional
 Pontuar também a importância de se levar em consideração se a institucionalidade é formal (legislatória) ou informal (convenção, prática bancária)
+**** Críticas a VoC
+- Firm-centric
+- Supply-side
+- Complementarities
+**** Revisão da literature recente VoC macroeconômica
+- Maior destaque para distribuição
+**** Retomar importância de housing e introduzir a ideia de como instituições tratadas de forma diferente podem esclarecer as questões de convergência, divergência e consequência
 **** Divergência na semelhança e Convergência no diferente
+
+*** Conclusão da seção: Revisão da literatura empírica e incapacidade de analisar variáveis qualitativas adequadamente
 ** Data and Methods
-*** Reagrupar informações institucionais de forma qualitativa
 *** Apresentar origens, aplicações e vantagens do QCA
 *** Explicar etapas do QCA
 *** Calibrar dados
