Refile according DrWatson. FIXME: some path may changed

--- a/Writings/QCA/Research_Paper.org
+++ b/Writings/QCA/Research_Paper.org
@@ -22,6 +22,7 @@
 
 - The great mortgaging and the housing financing revolution: enabling each other? An institutional fuzzy-set Qualitative Comparative Analysis (fsQCA) for 17 OECD countries (1989-2016)
 - Institutional diversity still matters? Comparing housing financing milestones using fsQCA (1989-2014)
+- Reassessing the dual convergence debate: a methodological proposal based on the housing finance Great Revolution
 ** Introduction
 *** Importância do mercado imobiliário para compreender características da GFC
 - Reforçar como o interesse aumentou pós GFC
