Candidatos à variáveis no modelo

--- a/Writings/QCA/Research_Paper.org
+++ b/Writings/QCA/Research_Paper.org
@@ -33,6 +33,7 @@
 *** Estrutura do artigo
 
 ** Empirical motivation
+*** Background: desregulamentação dos anos 80
 *** Apresentar conceito da hipotecarização
 *** Analisar os dados
 *** Agrupar países e explicitar possíveis hipóteses direcionais e trajetórias
@@ -55,12 +56,25 @@ Pontuar também a importância de se levar em consideração se a institucionali
 - Maior destaque para distribuição
 **** Retomar importância de housing e introduzir a ideia de como instituições tratadas de forma diferente podem esclarecer as questões de convergência, divergência e consequência
 **** Divergência na semelhança e Convergência no diferente
-
+- Hipótese da divergência aparente: diferentes trajetórias e configurações institucionais podem estar associadas a um mesmo resultado. Assim, os países podem ser divergentes no sentido de quais características os descrevem, mas geram resultados similares (uma meta-convergência)
 *** Conclusão da seção: Revisão da literatura empírica e incapacidade de analisar variáveis qualitativas adequadamente
 ** Data and Methods
 *** Apresentar origens, aplicações e vantagens do QCA
 *** Explicar etapas do QCA
 *** Calibrar dados
+
+Candidatos:
+
+- LTV ratio
+- Mortgage length
+- Allows prepayment
+- Social housing program
+  + Share on GDP?
+  + Public sector participation?
+- Mortgaging (Outcome)
+  + Post 1990 (after deregulation/Germany reunification) to 2006 (prior to the GFC)?
+    - Não incluir 2014 para evitar mudanças institutionais na europa (ver EMCB, EMF video)
+
 *** Elaborar Truth table
 ** Results and parameters of fit
 *** Minimização da presença do resultado
