Adding EMF 2019-20 dataset and variables candidate

--- a/Writings/QCA/Research_Paper.org
+++ b/Writings/QCA/Research_Paper.org
@@ -62,18 +62,16 @@ Pontuar também a importância de se levar em consideração se a institucionali
 *** Apresentar origens, aplicações e vantagens do QCA
 *** Explicar etapas do QCA
 *** Calibrar dados
-
-Candidatos:
-
-- LTV ratio
-- Mortgage length
-- Allows prepayment
-- Social housing program
-  + Share on GDP?
-  + Public sector participation?
 - Mortgaging (Outcome)
   + Post 1990 (after deregulation/Germany reunification) to 2006 (prior to the GFC)?
     - Não incluir 2014 para evitar mudanças institutionais na europa (ver EMCB, EMF video)
+    - Desvio em relação à média da OCDE
+- Recortes:
+  + 1990(?)-2001: Pós Basileia I e pré bolha imobiliária e bolha-ponto-com
+  + 2002(?)-2006: Bolha imobiliária e pré-crise
+  + 2007-2014: Crise, pós-crise e pré EMCB
+    - Isolar efeito da crise?
+
 
 *** Elaborar Truth table
 ** Results and parameters of fit
